--- a/atm.html
+++ b/atm.html
@@ -21,7 +21,7 @@
     <nav>
         <a href="atm.html">Articulación Temporomandibular</a>
         <a href="bruxismo.html">Bruxismo</a>
-        <a href="limpieza.html">Limpieza Peridontal</a>
+        <a href="limpieza.html">Limpieza Peridontal y Blanqueamiento</a>
         <a href="ortodoncia.html">Ortodoncia</a>
 
     </nav>
