--- a/limpieza.html
+++ b/limpieza.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <!---Estilos Propios--->
     <link rel="stylesheet" href="css/styles.css">
-    <title>Limpieza Peridontal</title>
+    <title>Limpieza Peridontal y BLanqueamiento</title>
   </head>
   <body>
     <header><div class="logoimagen">
@@ -21,7 +21,7 @@
     <nav>
         <a href="atm.html">Articulación Temporomandibular</a>
         <a href="bruxismo.html">Bruxismo</a>
-        <a href="limpieza.html">Limpieza Peridontal</a>
+        <a href="limpieza.html">Limpieza Peridontal y Blanqueamiento</a>
         <a href="ortodoncia.html">Ortodoncia</a>
 
     </nav>
