--- a/index.html
+++ b/index.html
@@ -30,9 +30,24 @@
     </header>
 
     <main>
-<h1>
- Consultorio
+      <h1>
+        <b>Nosotros</b>
+      </h1>
+      <p>
+        Somos un equipo de profesionales con una continua capacitación titulados en diferentes Especialidades, lo que nos permite ofrecer el tratamiento ideal a cada paciente. La atención es totalmente personalizada dando confianza y calidez en un ambiente agradable. 
+        Nos hemos autoimpuesto el desafío profesional de ofrecer la mejor oportunidad en salud oral para nuestros pacientes, a través de análisis precisos de las patologías y tratamientos mínimamente invasivos.
 
+        La pasión por nuestra profesión nos conduce, desde hace años, a estar en constante perfeccionamiento tomando los más destacados cursos con dictantes nacionales e internacionales, implementado en nuestra practica las técnicas más avanzadas.
+        Nuestro objetivo es ayudarte a conseguir y mantener la salud bucal que siempre deseaste, centrándonos en resolver los problemas existentes y manteniendo tu salud en el tiempo para que puedas disfrutar la vida con confianza..
+      </p>
+<h1>
+ <b>Nuestro Consultorio</b>
+ <br>
+ <br>
+  <img src="img/consul1.jpg" alt="">
+  <img src="img/consul2.jpg" alt="">
+  <img src="img/consul3.jpg" alt="">
+  <img src="img/consul4.jpg" alt="">
 </h1>
     </main>
 
